tests/regression/errors/basic/undefined_var_24.csd
// Undefined variable test 24
vibez.spill("Using undefined:", undefined_var_24)
sus result drip = missing_variable + 24
